--- a/UniversityWeatherApp.csproj
+++ b/UniversityWeatherApp.csproj
@@ -5,10 +5,16 @@
     <TargetFramework>net6.0</TargetFramework>
   </PropertyGroup>
 
+  <!-- embeding files to prevent asset leak -->
   <ItemGroup>
-    <!-- embeding css files for better deploy -->
     <EmbeddedResource Include="UI\Styles\**\*.gtk.css">
       <LogicalName>%(Filename)%(Extension)</LogicalName>
+    </EmbeddedResource>
+
+    <!-- "%(RecursiveDir)%" in LogicalName allow to write path of files with their directories (in code) -->
+    <!-- e.g. "Directory/AnotherDir/Image.png" -->
+    <EmbeddedResource Include="Assets\**\*.png">
+      <LogicalName>%(RecursiveDir)%(Filename)%(Extension)</LogicalName>
     </EmbeddedResource>
   </ItemGroup>
 
