--- a/UniversityWeatherApp.csproj
+++ b/UniversityWeatherApp.csproj
@@ -16,6 +16,7 @@
     <PackageReference Include="Avalonia" Version="11.3.11" />
     <PackageReference Include="Avalonia.Desktop" Version="11.3.11" />
     <PackageReference Include="Avalonia.Markup.Declarative" Version="11.1.3" />
+    <PackageReference Include="Avalonia.Svg" Version="11.3.0" />
     <PackageReference Include="Avalonia.Themes.Fluent" Version="11.3.11" />
     <PackageReference Include="Avalonia.Fonts.Inter" Version="11.3.11" />
     <!--Condition below is needed to remove Avalonia.Diagnostics package from build output in Release configuration.-->
